6754519: don't emit flag fixup for NaN when condition being tested doesn't need it

Reviewed-by: kvn, rasbold